--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Raydium</title>
+    <title>iDEX</title>
     <meta
       name="description"
       content="An avenue for the evolution of DeFi"
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <script src="%PUBLIC_URL%/datafeeds/udf/dist/polyfills.js"></script>	
+    <script src="%PUBLIC_URL%/datafeeds/udf/dist/polyfills.js"></script>
     <script src="%PUBLIC_URL%/datafeeds/udf/dist/bundle.js"></script>
   </head>
   <body>
